stopped media from shifting around on hover

--- a/style.css
+++ b/style.css
@@ -183,6 +183,10 @@ a {
 }
 
 .about-link {
+  height: 20px;
+}
+
+.about-link {
   padding: 5px;
 }
 
